src/styles/typography.css
/* TODO: make responsive */
:root {
  --h1-font-size: clamp(2rem, 5dvw, 2.636rem);
  --h2-font-size: clamp(1.2rem, 3.5dvw, 2.182rem);
  --h3-font-size: clamp(1rem, 2.5dvw, 1.591rem);
  --h4-font-size: clamp(16px, 2.3dvw, 1.364rem);
  --body-font-size: clamp(16px, 1.5dvw, 1.364rem);

  --h3-line-height: 1.4;
  --h1-line-height: 1.4;
  --h4-line-height: 1.4;
  --h2-line-height: 1.4;
  --body-line-height: 2.22;
}

html {
  font-size: 18px; /* base for rem, needs to by px */
  line-height: var(--body-line-height);
}

body {
  font-size: var(--body-font-size);
}

.heading-1,
.heading-2,
.heading-3,
.heading-4,
.body > a,
.body > strong {
  color: var(--text-dark);
  font-weight: 700;
}

.heading-1 {
  font-size: var(--h1-font-size);
  line-height: var(--h1-line-height);
  margin-block: 0 var(--h1-margin);

  &:first-child {
    margin-block: var(--h1-margin);
  }
}

.heading-2 {
  font-size: var(--h2-font-size);
  line-height: var(--h2-line-height);
  margin-block: 0 var(--h2-margin);
  text-align: center;

  &:first-child {
    margin-block: var(--h2-margin);
  }
}

.heading-3 {
  font-size: var(--h3-font-size);
  line-height: var(--h3-line-height);
  margin-block: var(--h3-margin);
  color: var(--primary);
}

.heading-4 {
  font-size: var(--h4-font-size);
  line-height: var(--h4-line-height);
  margin-block: 0 var(--h4-margin);
}

.body {
  font-size: var(--body-font-size);
  margin-block: 0 var(--body-margin-bottom);
}

.list {
  padding-left: 3rem;
  margin-block: 0 var(--list-margin-bottom);
  display: grid;
  list-style: none;
  align-items: center;
  row-gap: 1em;

  & > li {
    position: relative;
    line-height: 1.7;

    &::before {
      content: "";
      background: no-repeat center/100%
        url("./../../public/icons/kommentar-check.svg");
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      height: 25px;
      aspect-ratio: 1;
      left: clamp(-2em, 100%, -2.5em);
    }
  }
}

p > a {
  color: var(--primary-dark);
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

